force-app/main/default/objects/InsurancePolicy/InsurancePolicy.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>