force-app/main/default/objects/InsurancePolicy/fields/GLBP1_Direccion__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Direccion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dirección</label>
    <referenceTo>Address</referenceTo>
    <relationshipLabel>Pólizas de seguros</relationshipLabel>
    <relationshipName>P_lizas_de_seguros</relationshipName>
    <type>Lookup</type>
</CustomField>