force-app/main/default/objects/InsurancePolicy/fields/GLBP1_IDOportunidad__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_IDOportunidad__c</fullName>
    <label>ID de Oportunidad</label>
    <length>20</length>
    <type>Text</type>
</CustomField>