force-app/main/default/objects/InsurancePolicy/fields/GLBP1_Nombre_del_Corredor__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Nombre_del_Corredor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corredor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Agency/Brokerage</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pólizas de seguros (Nombre del Corredor)</relationshipLabel>
    <relationshipName>P_lizas_de_seguros1</relationshipName>
    <type>Lookup</type>
</CustomField>