force-app/main/default/objects/InsurancePolicy/fields/GLBP1_Nombre_del_pagador__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Nombre_del_pagador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre del pagador</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Business, Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pólizas de seguros (Nombre del pagador)</relationshipLabel>
    <relationshipName>P_lizas_de_seguros</relationshipName>
    <type>Lookup</type>
</CustomField>