force-app/main/default/objects/InsurancePolicy/fields/GLP_P1_Divisa__c.field-meta.xml
<CustomField>
    <fullName>GLP_P1_Divisa__c</fullName>
    <label>Divisa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>CLF</fullName>
            </value>
            <value>
                <fullName>CLP</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>Dolar aduanero</fullName>
            </value>
            <value>
                <fullName>USRT (Unidad de seguro reajustable trimestralmente)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>