force-app/main/default/objects/InsurancePolicy/fields/N_Poliza_interno__c.field-meta.xml
<CustomField>
    <fullName>N_Poliza_interno__c</fullName>
    <displayFormat>PSF-{00000000}</displayFormat>
    <label>N°Póliza interno</label>
    <type>AutoNumber</type>
</CustomField>