force-app/main/default/objects/InsurancePolicy/fields/ZRH_NumeroDePoliza__c.field-meta.xml
<CustomField>
    <fullName>ZRH_NumeroDePoliza__c</fullName>
    <formula>ContractGroupPlan.ZRH_NumeroDePoliza__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de Póliza</label>
    <type>Text</type>
</CustomField>