force-app/main/default/objects/InsurancePolicy/listViews/All_InsurancePolicies.listView-meta.xml
<ListView>
    <fullName>All_InsurancePolicies</fullName>
    <columns>Name</columns>
    <columns>GrossWrittenPremium</columns>
    <columns>PolicyType</columns>
    <columns>NameInsured</columns>
    <columns>EffectiveDate</columns>
    <columns>ExpirationDate</columns>
    <columns>DateRenewed</columns>
    <columns>RenewalDate</columns>
    <columns>SaleDate</columns>
    <columns>ParentPolicy</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <label>Todas las Pólizas de seguros</label>
</ListView>